<resources>
    <string name="app_name">MatchesFitness</string>
    <string name="login_password">密码：</string>
    <string name="login_phone">手机号：</string>
    <string name="login_validate">验证码：</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="btn_submit">确定</string>
    <string name="register_user">注册用户</string>
    <string name="info_prefect">完善信息</string>
    <string name="register_password_confirm">确认密码：</string>
    <string name="reset_password">重置密码</string>
    <string name="commit_confirm">确认提交</string>
    <string name="forget_password">忘记密码？</string>
    <string name="post_validate">发送验证码</string>
    <string name="personal_info_prefect">个人信息完善</string>
    <string name="nickname">昵称</string>
    <string name="birthday">出生日期</string>
    <string name="sex">性别</string>
    <string name="gent">男</string>
    <string name="lady">女</string>
    <string name="fitness_experience">健身经验</string>
    <string name="set_pwd">设置密码（6-20位）</string>
    <string name="register_notice">点击注册表示同意</string>
    <string name="user_agreement">用户协议</string>
    <string name="get_identify">获取验证码</string>

    <string name="hint_input_phone">请输入手机号码</string>
    <string name="hint_input_identify">请输入验证码</string>
    <string name="hint_new_password">请输入新的密码</string>
    <string name="hint_new_password_confirm">确认新的密码</string>
    
    <string name="error_password_difference">两次输入的密码不一致</string>

    <string-array name="chinese_week_string_array">
        <item>周日</item>
        <item>周一</item>
        <item>周二</item>
        <item>周三</item>
        <item>周四</item>
        <item>周五</item>
        <item>周六</item>
    </string-array>
</resources>
