<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grayBg"
    android:orientation="vertical">

    <include layout="@layout/include_common_tool_bar" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_marginTop="20dp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingLeft="7dip"
            android:paddingRight="7dip"
            android:text="+86" />

        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:background="@color/gray" />

        <EditText
            android:id="@+id/edt_phone"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="center_vertical|left"
            android:hint="@string/hint_input_phone"
            android:paddingLeft="5dip"
            android:textSize="14sp"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:background="@color/gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/edt_identify"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:textSize="14sp"
            android:gravity="left|center_vertical"
            android:hint="@string/hint_input_identify"
            android:inputType="number"
            android:paddingLeft="5dp" />

        <TextView
            android:id="@+id/tv_get_identify"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/get_identify"
            android:textColor="@color/red" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:background="@color/gray" />

    <EditText
        android:id="@+id/edt_new_password"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@null"
        android:textSize="14sp"
        android:gravity="left|center_vertical"
        android:hint="@string/hint_new_password"
        android:inputType="textPassword"
        android:paddingLeft="5dip" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:background="@color/gray" />

    <EditText
        android:id="@+id/edt_new_password_confirm"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@null"
        android:textSize="14sp"
        android:gravity="left|center_vertical"
        android:hint="@string/hint_new_password_confirm"
        android:inputType="textPassword"
        android:paddingLeft="5dip" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:background="@color/gray" />

    <Button
        android:id="@+id/btn_commit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/login_btn_bg"
        android:text="@string/commit_confirm"
        android:textColor="@color/white" />
</LinearLayout>
