<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grayBg"
    android:orientation="vertical">

    <include layout="@layout/include_common_tool_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="0.8"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="vertical">


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_login_icon"
            android:layout_width="100dip"
            android:layout_height="100dip" />


    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1.2"
        android:background="@color/white">

        <LinearLayout
            android:id="@+id/ll_phone"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_alignParentTop="true"
            android:layout_marginStart="8dp"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingEnd="15dp"
            android:paddingStart="15dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_phone" />

            <EditText
                android:id="@+id/edt_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:inputType="phone" />

        </LinearLayout>

        <View
            android:id="@+id/view_01"
            android:layout_width="match_parent"
            android:layout_height="0.01dp"
            android:layout_below="@+id/ll_phone"
            android:layout_marginLeft="23dp"
            android:layout_marginRight="3dp"
            android:background="@color/gray" />


        <LinearLayout
            android:id="@+id/ll_validate"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_below="@id/view_01"
            android:layout_marginStart="8dp"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingEnd="15dp"
            android:paddingStart="15dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_validate" />

                <EditText
                    android:id="@+id/edt_validate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:gravity="center_vertical"
                    android:inputType="number"
                    android:maxLength="6" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_validate"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/post_validate"
                android:textColor="@color/red"
                android:textSize="@dimen/sp_14" />

        </LinearLayout>

        <View
            android:id="@+id/view_02"
            android:layout_width="match_parent"
            android:layout_height="0.01dp"
            android:layout_below="@+id/ll_validate"
            android:layout_marginLeft="23dp"
            android:layout_marginRight="3dp"
            android:background="@color/gray" />

        <LinearLayout
            android:id="@+id/ll_password"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_below="@id/view_02"
            android:layout_marginStart="8dp"
            android:background="@color/white"

            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingEnd="15dp"
            android:paddingStart="15dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ll_phone">

            <LinearLayout
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_password" />

                <EditText
                    android:id="@+id/edt_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:inputType="textPassword" />
            </LinearLayout>

        </LinearLayout>

        <View
            android:id="@+id/view_03"
            android:layout_width="match_parent"
            android:layout_height="0.01dp"
            android:layout_below="@+id/ll_password"
            android:layout_marginLeft="23dp"
            android:layout_marginRight="3dp"
            android:background="@color/gray" />



        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="23dip"
            android:layout_marginRight="23dip"
            android:background="@drawable/login_btn_bg"
            android:text="@string/register"
            android:textColor="@color/white"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20sp"
            android:layout_marginRight="20sp"
            android:layout_marginTop="40dip"
            android:gravity="center"
            android:orientation="horizontal">

            <View
                android:layout_width="0dip"
                android:layout_height="0.1dp"
                android:layout_weight="1"
                android:background="@color/grayLine" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="  或  " />

            <View
                android:layout_width="0dip"
                android:layout_height="0.1dp"
                android:layout_weight="1"
                android:background="@color/grayLine" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_wb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTop="@mipmap/login_wb_icon"
                android:gravity="center"
                android:text="微博" />

            <TextView
                android:id="@+id/tv_wx"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:drawableTop="@mipmap/login_wx_icon"
                android:gravity="center"
                android:text="微信" />

            <TextView
                android:id="@+id/tv_tw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:drawableTop="@mipmap/login_twitter_icon"
                android:gravity="center"
                android:text="Twitter" />

            <TextView
                android:id="@+id/tv_fc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:drawableTop="@mipmap/login_facebook_icon"
                android:gravity="center"
                android:text="Facebook" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="1"
            android:gravity="center_horizontal|bottom"
            android:orientation="vertical"
            android:paddingBottom="15dp">

            <View
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:background="@color/grayLine" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="点击注册表示同意" />

                <TextView
                    android:id="@+id/tv_agreement"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="用户协议"
                    android:textColor="@color/black" />
            </LinearLayout>

        </LinearLayout>


    </LinearLayout>

</LinearLayout>